--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/assets/img/logo-late-night-favicon.svg">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="/assets/icons/logo-late-night-favicon.svg">
+    <title>Late Night</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
 </body>
