--- a/index.html
+++ b/index.html
@@ -8,5 +8,64 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
+    <header>
+        <nav class="nav__bar">
+            <a href=""><img src="" alt="" class="logo"></a>
+            <button class="btn__1">Mention Légales</button>
+            <button class="btn__2">Histoire</button>
+            <button class="btn__2">Communauté</button>
+            <button class="btn__2">Score</button>
+        </nav>
+    </header>
+    <main>
+        <div class="banner">
+            <img src="" alt="banner__late-Night" class="banner__top">
+            <div class="hero__graphique">
+                <img class="arbre violet" src="" alt="arbre violet">
+                <div class="contenu">
+                    <section class="hero">
+                        <h1></h1>
+                        <div class="hero__content">
+                            <div>
+                                <h3></h3>
+                                <p></p>
+                            </div>
+                            <img src="" alt="">
+                        </div>
+                    </section>
+                    <section class="vidéo">
+                    </section>
+                    <section class="event">
+                    </section>
+                </div>
+                <img class="arbre orange" src="" alt="arbre orange">
+            </div>
+            <img src="" alt="" class="banner__bot">
+        </div>
+    </main>
+    <footer>
+        <a href=""><img src="" alt="" class="logo"></a>
+        <div>
+            <div>
+                <h6></h6>
+                <h6></h6>
+            </div>
+            <div>
+                <button class="btn__3">
+                    Score
+                </button>
+                <button class="btn__3">
+                    Mention Légales
+                </button>
+                <button class="btn__3">
+                    Communauté
+                </button>
+                <button class="btn__3">
+                    Histoire
+                </button>
+            </div>
+        </div>
+        <p></p>
+    </footer>
 </body>
 </html>
