--- a/index.html
+++ b/index.html
@@ -3,69 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/assets/icons/logo-late-night-favicon.svg">
     <title>Late Night</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <nav class="nav__bar">
-            <a href=""><img src="" alt="" class="logo"></a>
-            <button class="btn__1">Mention Légales</button>
-            <button class="btn__2">Histoire</button>
-            <button class="btn__2">Communauté</button>
-            <button class="btn__2">Score</button>
-        </nav>
+        <a href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
+        <a href="" class="style__btn__1">
+            <h2 class="btn__1">Mention Légales</h2>
+        </a>
+        <a href="" class="style__btn__2">
+            <h2 class="btn__2">Histoire</h2>
+        </a>
+        <a href="" class="style__btn__2">
+            <h2 class="btn__2">Communauté</h2>
+        </a>
+        <a href="" class="style__btn__2">
+            <h2 class="btn__2">Score</h2>
+        </a>
     </header>
     <main>
         <div class="banner">
-            <img src="" alt="banner__late-Night" class="banner__top">
+            <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
             <div class="hero__graphique">
-                <img class="arbre violet" src="" alt="arbre violet">
+                <img width="800px" class="arbre__violet" src="./assets/img/left-tree-violet.svg" alt="arbre violet">
                 <div class="contenu">
                     <section class="hero">
-                        <h1></h1>
+                        <h1>Bienvenu sur le site de Late Night</h1>
                         <div class="hero__content">
-                            <div>
-                                <h3></h3>
-                                <p></p>
+                            <div class="hero__left">
+                                <h3>Avant de commencé,<br> pourquoi un site ?</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit molestiae excepturi, nesciunt adipisci iure, molestias ex fuga consequatur voluptatibus debitis quos iste autem expedita! Natus porro sed facere eligendi excepturi.</p>
                             </div>
-                            <img src="" alt="">
+                            <img src="./assets/img/logo-late-night-white.svg" alt="logo late night white">
                         </div>
                     </section>
                     <section class="vidéo">
+                        <h2>Regarde, Une Nouvelle Vidéo !!!</h2>
+                        <div class="vidéo__content">
+                            <h3>Late Night Ep.2 - La rencontre</h3>
+                            <a href=""><img src="./assets/img/blanc.svg" alt=""></a>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, officia possimus corporis pariatur quaerat unde quidem? Aliquid neque ipsum quasi mollitia officiis saepe eveniet, aperiam, nostrum dolorem fugiat, animi vero? Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, nam, nostrum sed facere aliquam quia maiores dolore ipsa doloremque vero architecto aspernatur. Quas modi fugiat harum saepe eaque, nesciunt maxime.</p>
+                        </div>
                     </section>
+                    <div class="sabonner">
+                        <a href=""><h3>S'abonner</h3></a>
+                    </div>
                     <section class="event">
+                        <div class="event__left">
+                            <h3 class="event__title">participe à un événement</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur. Turpis malesuada hac nec duis habitasse id nibh pretium diam. Turpis non nisl montes nibh dui in tellus. Porta eu placerat in cursus porttitor mauris. Maecenas blandit aenean urna nibh enim scelerisque neque. Ut dui ultricies tempor sociis feugiat urna. Nisl dictumst ut viverra maecenas aliquet et turpis. Pellentesque tortor viverra turpis posuere sed. Fames vitae nisi pharetra lobortis lacus.</p>
+                            <a class="event__btn" href=""><h3>rejoindre l’event</h3></a>
+                        </div>
+                        <a href=""><img src="./assets/img/insert-coin.gif" alt="insert-cap-pixel-art-moskazi"></a>
                     </section>
                 </div>
-                <img class="arbre orange" src="" alt="arbre orange">
+                <img width="800px" class="arbre__orange" src="./assets/img/right-tree-orange.svg" alt="arbre orange">
             </div>
-            <img src="" alt="" class="banner__bot">
+            <img src="./assets/img/bench with can.png" alt="" class="banner__bot">
         </div>
     </main>
     <footer>
-        <a href=""><img src="" alt="" class="logo"></a>
-        <div>
-            <div>
-                <h6></h6>
-                <h6></h6>
+        <a href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="" class="logo"></a>
+        <div class="footer__content">
+            <div class="footer__left">
+                <h6>Mail : Late-Night@gmail.com</h6>
+                <h6>linkedin : Thomas PFAU</h6>
             </div>
-            <div>
-                <button class="btn__3">
-                    Score
-                </button>
-                <button class="btn__3">
-                    Mention Légales
-                </button>
-                <button class="btn__3">
-                    Communauté
-                </button>
-                <button class="btn__3">
-                    Histoire
-                </button>
+            <div class="footer__right">
+                <div class="footer__lright">
+                    <a href="" class="btn__3">
+                        Score
+                    </a>
+                    <a href="" class="btn__4">
+                        Mention Légales
+                    </a>
+                </div>
+                <div class="footer__rright">
+                    <a href="" class="btn__3">
+                        Communauté
+                    </a>
+                    <a href="" class="btn__3">
+                        Histoire
+                    </a>
+                </div>
             </div>
         </div>
-        <p></p>
+        <p>©2025 late Night. tous droit réservés.</p>
     </footer>
 </body>
 </html>
