debut html commu+css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="" class="style__btn__2">
             <h2 class="btn__2">Histoire</h2>
         </a>
-        <a href="" class="style__btn__2">
+        <a href="./communnity.html  " class="style__btn__2">
             <h2 class="btn__2">Communauté</h2>
         </a>
         <a href="" class="style__btn__2">
