--- a/communnity.html
+++ b/communnity.html
@@ -28,55 +28,73 @@
         <div class="main__community">
             <section class="community__contenu">
                 <h1>rejoins la communauté de late night</h1>
-                <div class="commu__discord">
-                    <div class="img__commu__ds">
-                        <a href="">
-                            <img src="./assets/img/Discord.png" alt="">
+                <div class="commu discord">
+                    <a class="img__commu" href="">
+                        <img src="./assets/img/Discord.png" alt="">
+                    </a>
+                    <div class="commu__div">
+                        <a href="" class="than">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M380.6 81.7c7.9 15.8 1.5 35-14.3 42.9L103.6 256 366.3 387.4c15.8 7.9 22.2 27.1 14.3 42.9s-27.1 22.2-42.9 14.3l-320-160C6.8 279.2 0 268.1 0 256s6.8-23.2 17.7-28.6l320-160c15.8-7.9 35-1.5 42.9 14.3z"/></svg>
                         </a>
-                    </div>
-                    <div class="discord__div">
-                        <a>👈</a>
-                        <div class="discord__card">
-                            <div class="discord__img">
+                        <div class="commu__card">
+                            <div class="commu__img">
                                 <img src="./assets/img/Discord-screen.png" alt="">
                             </div>
-                            <div class="discord__contenu">
+                            <div class="commu__contenu">
                                 <h3>un serveur discord ?!</h3>
                                 <p>Envie de discuter avec la commu, papoter avec les créateurs de Late Night ou carrément participer à des événements stylés ? Rejoins-nous pour partager tes idées, poser tes questions, ou juste passer un bon moment avec d'autres passionnés. Que tu sois là pour chill ou t’impliquer à fond, t’as ta place ici !</p>
                                 <a class="btn__5" href=""><h3>rejoindre</h3></a>
                             </div>
                         </div>
-                        <a href="">👉</a>
+                        <a href="" class="than">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M3.4 81.7c-7.9 15.8-1.5 35 14.3 42.9L280.5 256 17.7 387.4C1.9 395.3-4.5 414.5 3.4 430.3s27.1 22.2 42.9 14.3l320-160c10.8-5.4 17.7-16.5 17.7-28.6s-6.8-23.2-17.7-28.6l-320-160c-15.8-7.9-35-1.5-42.9 14.3z"/></svg>
+                        </a>
                     </div>
                 </div>
-                <div class="commu__ytb">
-                    <a class="img__commu__yt">
+                <div class="commu youtube">
+                    <a class="img__commu">
                         <img src="./assets/img/youtube.png" alt="">
                     </a>
-                    <div>
-                        <a href="">👈</a>
-                        <img src="./assets/img/Youtube-screen.png" alt="">
-                        <div class="ytb__contenu">
-                            <h3>Lorem ipsum dolor</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur. Mauris et quis risus cursus. Etiam morbi ultricies sodales urna pellentesque lorem. Aliquam placerat tincidunt cursus mattis mauris molestie facilisis consequat scelerisque. Vestibulum accumsan pretium facilisis interdum sem. Id amet enim laoreet duis quis. Amet mauris malesuada ut amet. Risus odio pulvinar volutpat amet sem. Non libero amet aliquet fusce.</p>
-                            <a class="btn__5" href=""><h3>rejoindre</h3></a>
+                    <div class="commu__div">
+                        <a href="" class="than">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M380.6 81.7c7.9 15.8 1.5 35-14.3 42.9L103.6 256 366.3 387.4c15.8 7.9 22.2 27.1 14.3 42.9s-27.1 22.2-42.9 14.3l-320-160C6.8 279.2 0 268.1 0 256s6.8-23.2 17.7-28.6l320-160c15.8-7.9 35-1.5 42.9 14.3z"/></svg>
+                        </a>
+                        <div class="commu__card">
+                            <div class="commu__img">
+                                <img src="./assets/img/Youtube-screen.png" alt="">
+                            </div>
+                            <div class="commu__contenu">
+                                <h3>Lorem ipsum dolor</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur. Mauris et quis risus cursus. Etiam morbi ultricies sodales urna pellentesque lorem. Aliquam placerat tincidunt cursus mattis mauris molestie facilisis consequat scelerisque. Vestibulum accumsan pretium facilisis interdum sem. Id amet enim laoreet duis quis. Amet mauris malesuada ut amet. Risus odio pulvinar volutpat amet sem. Non libero amet aliquet fusce.</p>
+                                <a class="btn__5" href=""><h3>rejoindre</h3></a>
+                            </div>
                         </div>
-                        <a href="">👉</a>
+                        <a href="" class="than">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M3.4 81.7c-7.9 15.8-1.5 35 14.3 42.9L280.5 256 17.7 387.4C1.9 395.3-4.5 414.5 3.4 430.3s27.1 22.2 42.9 14.3l320-160c10.8-5.4 17.7-16.5 17.7-28.6s-6.8-23.2-17.7-28.6l-320-160c-15.8-7.9-35-1.5-42.9 14.3z"/></svg>
+                        </a>
                     </div>
                 </div>
-                <div class="commu__twitch">
-                    <a class="img__commu__tw">
+                <div class="commu twitch">
+                    <a class="img__commu">
                         <img src="./assets/img/twitch.png" alt="">
                     </a>
-                    <div>
-                        <a href="">👈</a>
-                        <img src="./assets/img/Twitch-screen.jpg" alt="">
-                        <div class="twitch__contenu">
-                            <h3>Lorem ipsum dolor</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur. Mauris et quis risus cursus. Etiam morbi ultricies sodales urna pellentesque lorem. Aliquam placerat tincidunt cursus mattis mauris molestie facilisis consequat scelerisque. Vestibulum accumsan pretium facilisis interdum sem. Id amet enim laoreet duis quis. Amet mauris malesuada ut amet. Risus odio pulvinar volutpat amet sem. Non libero amet aliquet fusce.</p>
-                            <a class="btn__5" href=""><h3>rejoindre </h3></a>
+                    <div class="commu__div">
+                        <a href="" class="than">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M380.6 81.7c7.9 15.8 1.5 35-14.3 42.9L103.6 256 366.3 387.4c15.8 7.9 22.2 27.1 14.3 42.9s-27.1 22.2-42.9 14.3l-320-160C6.8 279.2 0 268.1 0 256s6.8-23.2 17.7-28.6l320-160c15.8-7.9 35-1.5 42.9 14.3z"/></svg>
+                        </a>
+                        <div class="commu__card">
+                            <div class="commu__img">
+                                <img src="./assets/img/Twitch-screen.jpg" alt="">
+                            </div>
+                            <div class="commu__contenu">
+                                <h3>Lorem ipsum dolor</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur. Mauris et quis risus cursus. Etiam morbi ultricies sodales urna pellentesque lorem. Aliquam placerat tincidunt cursus mattis mauris molestie facilisis consequat scelerisque. Vestibulum accumsan pretium facilisis interdum sem. Id amet enim laoreet duis quis. Amet mauris malesuada ut amet. Risus odio pulvinar volutpat amet sem. Non libero amet aliquet fusce.</p>
+                                <a class="btn__5" href=""><h3>rejoindre </h3></a>
+                            </div>
                         </div>
-                        <a href="">👉</a>
+                        <a href="" class="than">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M3.4 81.7c-7.9 15.8-1.5 35 14.3 42.9L280.5 256 17.7 387.4C1.9 395.3-4.5 414.5 3.4 430.3s27.1 22.2 42.9 14.3l320-160c10.8-5.4 17.7-16.5 17.7-28.6s-6.8-23.2-17.7-28.6l-320-160c-15.8-7.9-35-1.5-42.9 14.3z"/></svg>
+                        </a>
                     </div>
                 </div> 
             </section>
