--- a/communnity.html
+++ b/communnity.html
@@ -23,6 +23,7 @@
         <a href="" class="style__btn__2">
             <h2 class="btn__2">Score</h2>
         </a>
+        <a href="" class="burger">_</a>
     </header>
     <main class="banner">
         <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
