--- a/index.html
+++ b/index.html
@@ -23,21 +23,24 @@
         <a href="" class="style__btn__2">
             <h2 class="btn__2">Score</h2>
         </a>
+        <a href="" class="burger">_</a>
     </header>
     <main>
         <div class="banner">
-            <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
+            <div class="banner__top__top">
+                <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
+            </div>
             <div class="hero__graphique">
-                <img width="800px" class="arbre__violet" src="./assets/img/left-tree-violet.svg" alt="arbre violet">
+                <img class="arbre__violet" src="./assets/img/left-tree-violet.svg" alt="arbre violet">
                 <div class="contenu">
                     <section class="hero">
-                        <h1>Bienvenu sur le site de Late Night</h1>
+                        <h1>Bienvenue sur le site de Late Night</h1>
                         <div class="hero__content">
                             <div class="hero__left">
-                                <h3>Avant de commencé,<br> pourquoi un site ?</h3>
+                                <h3>Avant de commencer, pourquoi un site ?</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit molestiae excepturi, nesciunt adipisci iure, molestias ex fuga consequatur voluptatibus debitis quos iste autem expedita! Natus porro sed facere eligendi excepturi.</p>
                             </div>
-                            <img src="./assets/img/logo-late-night-white.svg" alt="logo late night white">
+                            <img class="logo__hero__left" src="./assets/img/logo-late-night-white.svg" alt="logo late night white">
                         </div>
                     </section>
                     <section class="vidéo">
@@ -60,7 +63,7 @@
                         <a href=""><img src="./assets/img/insert-coin.gif" alt="insert-cap-pixel-art-moskazi"></a>
                     </section>
                 </div>
-                <img width="800px" class="arbre__orange" src="./assets/img/right-tree-orange.svg" alt="arbre orange">
+                <img class="arbre__orange" src="./assets/img/right-tree-orange.svg" alt="arbre orange">
             </div>
             <img src="./assets/img/bench with can.png" alt="" class="banner__bot">
         </div>
