--- a/communnity.html
+++ b/communnity.html
@@ -11,22 +11,16 @@
 <body>
     <header>
         <a href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
-        <a href="" class="style__btn__1">
-            <h2 class="btn__1">Mention Légales</h2>
-        </a>
-        <a href="" class="style__btn__2">
-            <h2 class="btn__2">Histoire</h2>
-        </a>
-        <a href="./index.html" class="style__btn__2">
-            <h2 class="btn__2">Accueil</h2>
-        </a>
-        <a href="" class="style__btn__2">
-            <h2 class="btn__2">Score</h2>
-        </a>
+        <a href="" class="style__btn__1">Mention Légales</a>
+        <a href="" class="style__btn__2">Histoire</a>
+        <a href="./index.html" class="style__btn__2">Accueil</a>
+        <a href="" class="style__btn__2">Score</a>
         <a href="" class="burger">_</a>
     </header>
     <main class="banner">
-        <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
+        <div class="banner__top__top">
+            <img src="./assets/img/bench without can.png" alt="banner__late-Night" class="banner__top">
+        </div>
         <div class="main__community">
             <section class="community__contenu">
                 <h1>rejoins la communauté de late night</h1>
@@ -45,10 +39,10 @@
                             <div class="commu__contenu">
                                 <h3>un serveur discord ?!</h3>
                                 <p>Envie de discuter avec la commu, papoter avec les créateurs de Late Night ou carrément participer à des événements stylés ? Rejoins-nous pour partager tes idées, poser tes questions, ou juste passer un bon moment avec d'autres passionnés. Que tu sois là pour chill ou t’impliquer à fond, t’as ta place ici !</p>
-                                <a class="btn__5" href=""><h3>rejoindre</h3></a>
+                                <a class="btn__5" href="">rejoindre</a>
                             </div>
                         </div>
-                        <a href="" class="than">
+                        <a Qref="" class="than">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M3.4 81.7c-7.9 15.8-1.5 35 14.3 42.9L280.5 256 17.7 387.4C1.9 395.3-4.5 414.5 3.4 430.3s27.1 22.2 42.9 14.3l320-160c10.8-5.4 17.7-16.5 17.7-28.6s-6.8-23.2-17.7-28.6l-320-160c-15.8-7.9-35-1.5-42.9 14.3z"/></svg>
                         </a>
                     </div>
@@ -68,7 +62,7 @@
                             <div class="commu__contenu">
                                 <h3>Lorem ipsum dolor</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur. Mauris et quis risus cursus. Etiam morbi ultricies sodales urna pellentesque lorem. Aliquam placerat tincidunt cursus mattis mauris molestie facilisis consequat scelerisque. Vestibulum accumsan pretium facilisis interdum sem. Id amet enim laoreet duis quis. Amet mauris malesuada ut amet. Risus odio pulvinar volutpat amet sem. Non libero amet aliquet fusce.</p>
-                                <a class="btn__5" href=""><h3>rejoindre</h3></a>
+                                <a class="btn__5" href="">rejoindre</a>
                             </div>
                         </div>
                         <a href="" class="than">
@@ -91,7 +85,7 @@
                             <div class="commu__contenu">
                                 <h3>Lorem ipsum dolor</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur. Mauris et quis risus cursus. Etiam morbi ultricies sodales urna pellentesque lorem. Aliquam placerat tincidunt cursus mattis mauris molestie facilisis consequat scelerisque. Vestibulum accumsan pretium facilisis interdum sem. Id amet enim laoreet duis quis. Amet mauris malesuada ut amet. Risus odio pulvinar volutpat amet sem. Non libero amet aliquet fusce.</p>
-                                <a class="btn__5" href=""><h3>rejoindre </h3></a>
+                                <a class="btn__5" href="">rejoindre</a>
                             </div>
                         </div>
                         <a href="" class="than">
@@ -123,25 +117,17 @@
         <a href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="" class="logo"></a>
         <div class="footer__content">
             <div class="footer__left">
-                <h6>Mail : Late-Night@gmail.com</h6>
-                <h6>linkedin : Thomas PFAU</h6>
+                <span>Mail : Late-Night@gmail.com</span>
+                <span>linkedin : Thomas PFAU</span>
             </div>
             <div class="footer__right">
                 <div class="footer__lright">
-                    <a href="" class="btn__3">
-                        Score
-                    </a>
-                    <a href="" class="btn__4">
-                        Mention Légales
-                    </a>
+                    <a href="" class="btn__3">Score</a>
+                    <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
-                    <a href="" class="btn__3">
-                        Communauté
-                    </a>
-                    <a href="" class="btn__3">
-                        Histoire
-                    </a>
+                    <a href="/index.html" class="btn__3">Accueil</a>
+                    <a href="" class="btn__3">Histoire</a>
                 </div>
             </div>
         </div>
