--- a/index.html
+++ b/index.html
@@ -11,18 +11,10 @@
 <body>
     <header>
         <a href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
-        <a href="" class="style__btn__1">
-            <h2 class="btn__1">Mention Légales</h2>
-        </a>
-        <a href="" class="style__btn__2">
-            <h2 class="btn__2">Histoire</h2>
-        </a>
-        <a href="./communnity.html  " class="style__btn__2">
-            <h2 class="btn__2">Communauté</h2>
-        </a>
-        <a href="" class="style__btn__2">
-            <h2 class="btn__2">Score</h2>
-        </a>
+        <a href="" class="style__btn__1">Mention Légales</a>
+        <a href="" class="style__btn__2">Histoire</a>
+        <a href="./communnity.html  " class="style__btn__2">Communauté</a>
+        <a href="" class="style__btn__2">Score</a>
         <a href="" class="burger">_</a>
     </header>
     <main>
@@ -52,15 +44,16 @@
                         </div>
                     </section>
                     <div class="sabonner">
-                        <a href=""><h3>S'abonner</h3></a>
+                        <a href="">S'abonner</a>
                     </div>
                     <section class="event">
                         <div class="event__left">
                             <h3 class="event__title">participe à un événement</h3>
+                            <a class="capphone" href=""><img src="./assets/img/insert-coin.gif" alt="insert-cap-pixel-art-moskazi"></a>
                             <p>Lorem ipsum dolor sit amet consectetur. Turpis malesuada hac nec duis habitasse id nibh pretium diam. Turpis non nisl montes nibh dui in tellus. Porta eu placerat in cursus porttitor mauris. Maecenas blandit aenean urna nibh enim scelerisque neque. Ut dui ultricies tempor sociis feugiat urna. Nisl dictumst ut viverra maecenas aliquet et turpis. Pellentesque tortor viverra turpis posuere sed. Fames vitae nisi pharetra lobortis lacus.</p>
-                            <a class="event__btn" href=""><h3>rejoindre l’event</h3></a>
+                            <a class="event__btn" href="">rejoindre l’event</a>
                         </div>
-                        <a href=""><img src="./assets/img/insert-coin.gif" alt="insert-cap-pixel-art-moskazi"></a>
+                        <a class="capdesk" href=""><img src="./assets/img/insert-coin.gif" alt="insert-cap-pixel-art-moskazi"></a>
                     </section>
                 </div>
                 <img class="arbre__orange" src="./assets/img/right-tree-orange.svg" alt="arbre orange">
@@ -72,25 +65,17 @@
         <a href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="" class="logo"></a>
         <div class="footer__content">
             <div class="footer__left">
-                <h6>Mail : Late-Night@gmail.com</h6>
-                <h6>linkedin : Thomas PFAU</h6>
+                <span>Mail : Late-Night@gmail.com</span>
+                <span>linkedin : Thomas PFAU</span>
             </div>
             <div class="footer__right">
                 <div class="footer__lright">
-                    <a href="" class="btn__3">
-                        Score
-                    </a>
-                    <a href="" class="btn__4">
-                        Mention Légales
-                    </a>
+                    <a href="" class="btn__3">Score</a>
+                    <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
-                    <a href="" class="btn__3">
-                        Communauté
-                    </a>
-                    <a href="" class="btn__3">
-                        Histoire
-                    </a>
+                    <a href="/communnity.html" class="btn__3">Communauté</a>
+                    <a href="" class="btn__3">Histoire</a>
                 </div>
             </div>
         </div>
