--- a/communnity.html
+++ b/communnity.html
@@ -126,7 +126,7 @@
                     <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
-                    <a href="/index.html" class="btn__3">Accueil</a>
+                    <a href="./index.html" class="btn__3">Accueil</a>
                     <a href="" class="btn__3">Histoire</a>
                 </div>
             </div>
