--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="" class="btn__4">Mention Légales</a>
                 </div>
                 <div class="footer__rright">
-                    <a href="/communnity.html" class="btn__3">Communauté</a>
+                    <a href="./communnity.html" class="btn__3">Communauté</a>
                     <a href="" class="btn__3">Histoire</a>
                 </div>
             </div>
