2 première pages ~ responsive ~

--- a/communnity.html
+++ b/communnity.html
@@ -60,8 +60,8 @@
                                 <img src="./assets/img/Youtube-screen.png" alt="">
                             </div>
                             <div class="commu__contenu">
-                                <h3>Lorem ipsum dolor</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur. Mauris et quis risus cursus. Etiam morbi ultricies sodales urna pellentesque lorem. Aliquam placerat tincidunt cursus mattis mauris molestie facilisis consequat scelerisque. Vestibulum accumsan pretium facilisis interdum sem. Id amet enim laoreet duis quis. Amet mauris malesuada ut amet. Risus odio pulvinar volutpat amet sem. Non libero amet aliquet fusce.</p>
+                                <h3>notre chaine youtube</h3>
+                                <p>Envie de creuser des sujets, d’écouter des échanges sincères et des discussions passionnantes ? Notre émission est dispo sur YouTube : un podcast pensé pour ceux qui aiment prendre le temps de réfléchir, découvrir de nouveaux points de vue et entendre des voix qui sortent du cadre. Si t’as envie de contenu qui a du fond, c’est par ici que ça se passe.</p>
                                 <a class="btn__5" href="">rejoindre</a>
                             </div>
                         </div>
@@ -83,8 +83,8 @@
                                 <img src="./assets/img/Twitch-screen.jpg" alt="">
                             </div>
                             <div class="commu__contenu">
-                                <h3>Lorem ipsum dolor</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur. Mauris et quis risus cursus. Etiam morbi ultricies sodales urna pellentesque lorem. Aliquam placerat tincidunt cursus mattis mauris molestie facilisis consequat scelerisque. Vestibulum accumsan pretium facilisis interdum sem. Id amet enim laoreet duis quis. Amet mauris malesuada ut amet. Risus odio pulvinar volutpat amet sem. Non libero amet aliquet fusce.</p>
+                                <h3>une chaine twitch ?!</h3>
+                                <p>Envie de mater des lives chill, de rigoler avec la commu ou de kiffer des moments en direct avec les créateurs de Late Night ? Rejoins-nous sur Twitch pour des streams fun, du contenu cool et une ambiance de feu ! Que tu viennes juste pour lurker ou pour spam le chat, t’es plus que bienvenu chez nous !</p>
                                 <a class="btn__5" href="">rejoindre</a>
                             </div>
                         </div>
