--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div class="hero__content">
                             <div class="hero__left">
                                 <h3>Avant de commencer, pourquoi un site ?</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit molestiae excepturi, nesciunt adipisci iure, molestias ex fuga consequatur voluptatibus debitis quos iste autem expedita! Natus porro sed facere eligendi excepturi.</p>
+                                <p>On a lancé un site web pour aller plus loin que YouTube. C’est un espace à part pour centraliser nos contenus, partager des infos sur les épisodes, proposer des ressources complémentaires, et créer un vrai lien avec vous. En gros, c’est l’extension naturelle de la chaîne : un endroit pensé pour ceux qui veulent creuser, suivre l’émission autrement, et faire partie de l’aventure.</p>
                             </div>
                             <img class="logo__hero__left" src="./assets/img/logo-late-night-white.svg" alt="logo late night white">
                         </div>
@@ -50,7 +50,7 @@
                         <div class="event__left">
                             <h3 class="event__title">participe à un événement</h3>
                             <a class="capphone" href=""><img src="./assets/img/insert-coin.gif" alt="insert-cap-pixel-art-moskazi"></a>
-                            <p>Lorem ipsum dolor sit amet consectetur. Turpis malesuada hac nec duis habitasse id nibh pretium diam. Turpis non nisl montes nibh dui in tellus. Porta eu placerat in cursus porttitor mauris. Maecenas blandit aenean urna nibh enim scelerisque neque. Ut dui ultricies tempor sociis feugiat urna. Nisl dictumst ut viverra maecenas aliquet et turpis. Pellentesque tortor viverra turpis posuere sed. Fames vitae nisi pharetra lobortis lacus.</p>
+                            <p>Envie d’être au courant avant tout le monde ? Les annonces de nos événements seront toujours dispo en avance sur le site. Que ce soit une rencontre, un live spécial ou un projet un peu fou, c’est là-bas que ça se passe en premier. Si tu veux rien louper et faire partie des premiers à t’inscrire ou à réagir, garde un œil sur le site !</p>
                             <a class="event__btn" href="">rejoindre l’event</a>
                         </div>
                         <a class="capdesk" href=""><img src="./assets/img/insert-coin.gif" alt="insert-cap-pixel-art-moskazi"></a>
