fin page commu accueil

--- a/communnity.html
+++ b/communnity.html
@@ -117,6 +117,7 @@
         <a href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="" class="logo"></a>
         <div class="footer__content">
             <div class="footer__left">
+                <span>YouTube : Late-Night</span>
                 <span>Mail : Late-Night@gmail.com</span>
                 <span>linkedin : Thomas PFAU</span>
             </div>
