--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-        <a href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
+        <a class="nohov" href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="Late-Night logo " class="logo"></a>
         <a href="" class="style__btn__1">Mention Légales</a>
         <a href="" class="style__btn__2">Histoire</a>
         <a href="./communnity.html  " class="style__btn__2">Communauté</a>
         <a href="" class="style__btn__2">Score</a>
-        <a href="" class="burger">_</a>
+        <button href="" class="burger"><span class="bar"></span></button>
     </header>
     <main>
         <div class="banner">
@@ -44,7 +44,7 @@
                         </div>
                     </section>
                     <div class="sabonner">
-                        <a href="">S'abonner</a>
+                        <a class="hov" href="">S'abonner</a>
                     </div>
                     <section class="event">
                         <div class="event__left">
@@ -62,9 +62,10 @@
         </div>
     </main>
     <footer>
-        <a href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="" class="logo"></a>
+        <a class="nohov" href=""><img src="./assets/img/logo-late-night-white-echlonage.png" alt="" class="logo"></a>
         <div class="footer__content">
             <div class="footer__left">
+                <span>YouTube : Late-Night</span>
                 <span>Mail : Late-Night@gmail.com</span>
                 <span>linkedin : Thomas PFAU</span>
             </div>
